cmake_minimum_required(VERSION 3.15)
project(C++_Primer_5th)

set(CMAKE_CXX_STANDARD 11)

add_executable(1.1 1/1.1.cpp)
add_executable(1.2 1/1.2.cpp)
add_executable(1.3 1/1.3.cpp)
add_executable(1.4 1/1.4.cpp)
add_executable(1.5 1/1.5.cpp)
add_executable(1.7 1/1.7.cpp)
add_executable(1.9 1/1.9.cpp)
add_executable(1.10 1/1.10.cpp)
add_executable(1.11 1/1.11.cpp)
add_executable(1.13_1.9 1/1.13/1.9.cpp)
add_executable(1.13_1.10 1/1.13/1.10.cpp)
add_executable(1.13_1.11 1/1.13/1.11.cpp)
add_executable(1.16 1/1.16.cpp)
add_executable(1.18 1/1.18.cpp)
add_executable(1.19_1.11 1/1.19/1.11.cpp)
add_executable(1.20 1/1.20.cpp)
add_executable(1.21 1/1.21.cpp)
add_executable(1.22 1/1.22.cpp)
add_executable(1.23 1/1.23.cpp)
add_executable(1.25 1/1.25.cpp)

add_executable(2.4 2/2.4.cpp)
add_executable(2.8 2/2.8.cpp)
add_executable(2.18 2/2.18.cpp)
add_executable(2.34 2/2.34.cpp)
add_executable(2.35 2/2.35.cpp)
add_executable(2.41_1.20 2/2.41/1.20.cpp)
add_executable(2.41_1.21 2/2.41/1.21.cpp)
add_executable(2.41_1.22 2/2.41/1.22.cpp)
add_executable(2.41_1.23 2/2.41/1.23.cpp)
add_executable(2.41_1.25 2/2.41/1.25.cpp)
add_executable(2.42_1.20 2/2.42/1.20.cpp)
add_executable(2.42_1.21 2/2.42/1.21.cpp)
add_executable(2.42_1.22 2/2.42/1.22.cpp)
add_executable(2.42_1.23 2/2.42/1.23.cpp)
add_executable(2.42_1.25 2/2.42/1.25.cpp)

add_executable(3.1_2.41_1.20 3/3.1/2.41/1.20.cpp)
add_executable(3.1_2.41_1.21 3/3.1/2.41/1.21.cpp)
add_executable(3.1_2.41_1.22 3/3.1/2.41/1.22.cpp)
add_executable(3.1_2.41_1.23 3/3.1/2.41/1.23.cpp)
add_executable(3.1_2.41_1.25 3/3.1/2.41/1.25.cpp)
add_executable(3.1_1.9 3/3.1/1.9.cpp)
add_executable(3.1_1.10 3/3.1/1.10.cpp)
add_executable(3.1_1.11 3/3.1/1.11.cpp)
add_executable(3.2_line 3/3.2/line.cpp)
add_executable(3.2_word 3/3.2/word.cpp)
add_executable(3.4_length 3/3.4/length.cpp)
add_executable(3.4_order 3/3.4/order.cpp)
add_executable(3.5_concat 3/3.5/concat.cpp)
add_executable(3.5_stylise 3/3.5/stylise.cpp)
add_executable(3.6 3/3.6.cpp)
add_executable(3.7 3/3.7.cpp)
add_executable(3.8_for 3/3.8/for.cpp)
add_executable(3.8_while 3/3.8/while.cpp)
add_executable(3.10 3/3.10.cpp)
add_executable(3.14 3/3.14.cpp)
add_executable(3.15 3/3.15.cpp)
add_executable(3.16 3/3.16.cpp)
add_executable(3.17 3/3.17.cpp)
add_executable(3.20_adjacent 3/3.20/adjacent.cpp)
add_executable(3.20_symmetric 3/3.20/symmetric.cpp)
add_executable(3.21_3.16 3/3.21/3.16.cpp)
add_executable(3.22 3/3.22.cpp)
add_executable(3.23 3/3.23.cpp)
add_executable(3.24_3.20_adjacent 3/3.24/3.20/adjacent.cpp)
add_executable(3.24_3.20_symmetric 3/3.24/3.20/symmetric.cpp)
add_executable(3.25 3/3.25.cpp)
add_executable(3.31 3/3.31.cpp)
add_executable(3.32_array 3/3.32/array.cpp)
add_executable(3.32_vector 3/3.32/vector.cpp)
add_executable(3.35 3/3.35.cpp)
add_executable(3.39 3/3.39.cpp)
add_executable(3.40 3/3.40.cpp)
add_executable(3.41 3/3.41.cpp)
add_executable(3.42 3/3.42.cpp)
add_executable(3.43_pointer 3/3.43/pointer.cpp)
add_executable(3.43_range_for 3/3.43/range_for.cpp)
add_executable(3.43_subscript 3/3.43/subscript.cpp)
add_executable(3.44_pointer 3/3.44/pointer.cpp)
add_executable(3.44_range_for 3/3.44/range_for.cpp)
add_executable(3.44_subscript 3/3.44/subscript.cpp)
add_executable(3.45_pointer 3/3.45/pointer.cpp)
add_executable(3.45_range_for 3/3.45/range_for.cpp)
add_executable(3.45_subscript 3/3.45/subscript.cpp)

add_executable(4.4 4/4.4.cpp)
add_executable(4.21 4/4.21.cpp)
add_executable(4.22_conditional 4/4.22/conditional.cpp)
add_executable(4.22_if_else 4/4.22/if_else.cpp)
add_executable(4.28 4/4.28.cpp)
add_executable(4.29 4/4.29.cpp)

add_executable(5.3 5/5.3.cpp)
add_executable(5.5 5/5.5.cpp)
add_executable(5.6 5/5.6.cpp)
add_executable(5.9 5/5.9.cpp)
add_executable(5.10 5/5.10.cpp)
add_executable(5.11 5/5.11.cpp)
add_executable(5.12 5/5.12.cpp)
add_executable(5.14 5/5.14.cpp)
add_executable(5.17 5/5.17.cpp)
add_executable(5.19 5/5.19.cpp)
add_executable(5.20 5/5.20.cpp)
add_executable(5.21 5/5.21.cpp)
add_executable(5.23 5/5.23.cpp)
add_executable(5.24 5/5.24.cpp)
add_executable(5.25 5/5.25.cpp)

add_executable(6.3 6/6.3.cpp)
add_executable(6.4 6/6.4.cpp)
add_executable(6.5 6/6.5.cpp)
add_executable(6.7 6/6.7.cpp)
add_executable(6.9 6/6.9/fact.cc 6/6.9/factMain.cc)
target_include_directories(6.9 PUBLIC 6/6.8)
add_executable(6.10 6/6.10.cpp)
add_executable(6.11 6/6.11.cpp)
add_executable(6.12 6/6.12.cpp)
add_executable(6.21 6/6.21.cpp)
add_executable(6.23 6/6.23.cpp)
add_executable(6.25 6/6.25.cpp)
add_executable(6.26 6/6.26.cpp)
add_executable(6.27 6/6.27.cpp)
add_executable(6.33 6/6.33.cpp)
add_executable(6.38 6/6.38.cpp)
add_executable(6.42 6/6.42.cpp)
add_executable(6.47_6.33 6/6.47/6.33.cpp)
add_executable(6.51 6/6.51.cpp)
add_executable(6.55 6/6.55.cpp)
add_executable(6.56 6/6.56.cpp)

add_executable(7.1 7/7.1/main.cpp 7/7.1/tnx_proc.cpp)
target_include_directories(7.1 PUBLIC 2/2.42)
add_library(7.2 STATIC 7/7.2/Sales_data_2.cpp)
add_executable(7.3 7/7.3/main.cpp 7/7.3/tnx_proc_2.cpp)
target_link_libraries(7.3 7.2)
target_include_directories(7.3 PUBLIC 7/7.2)
add_library(7.6 STATIC 7/7.6/Sales_data_3.cpp)
add_executable(7.7 7/7.7.cpp)
target_link_libraries(7.7 7.6)
target_include_directories(7.7 PUBLIC 7/7.6)
add_library(7.9 7/7.9/Person_3.cpp)
add_executable(7.11 7/7.11/main.cpp 7/7.11/Sales_data_4.cpp)
add_library(7.12 STATIC 7/7.12/Sales_data_5.cpp)
add_executable(7.13 7/7.13.cpp)
target_link_libraries(7.13 7.12)
target_include_directories(7.13 PUBLIC 7/7.12)
add_library(7.14 STATIC 7/7.14/Sales_data_6.cpp)
add_library(7.15 STATIC 7/7.15/Person_4.cpp)
add_library(7.21 STATIC 7/7.21/Sales_data_7.cpp)
add_library(7.22 STATIC 7/7.22/Person_5.cpp)
add_library(7.26 STATIC 7/7.26/Sales_data_8.cpp)
add_executable(7.27 7/7.27/main.cpp)
add_executable(7.29 7/7.29/main.cpp)
add_library(7.32 STATIC 7/7.32/Window_mgr.cpp)
add_library(7.41 STATIC 7/7.41/Sales_data_9.cpp)
add_library(7.50 STATIC 7/7.50/Person_6.cpp)
add_library(7.57 STATIC 7/7.57/Account.cpp)
