add_executable(3.1_2.41_1.20 3.1/2.41/1.20.cpp)
add_executable(3.1_2.41_1.21 3.1/2.41/1.21.cpp)
add_executable(3.1_2.41_1.22 3.1/2.41/1.22.cpp)
add_executable(3.1_2.41_1.23 3.1/2.41/1.23.cpp)
add_executable(3.1_2.41_1.25 3.1/2.41/1.25.cpp)
add_executable(3.1_1.9 3.1/1.9.cpp)
add_executable(3.1_1.10 3.1/1.10.cpp)
add_executable(3.1_1.11 3.1/1.11.cpp)
add_executable(3.2_line 3.2/line.cpp)
add_executable(3.2_word 3.2/word.cpp)
add_executable(3.4_length 3.4/length.cpp)
add_executable(3.4_order 3.4/order.cpp)
add_executable(3.5_concat 3.5/concat.cpp)
add_executable(3.5_stylise 3.5/stylise.cpp)
add_executable(3.6 3.6.cpp)
add_executable(3.7 3.7.cpp)
add_executable(3.8_for 3.8/for.cpp)
add_executable(3.8_while 3.8/while.cpp)
add_executable(3.10 3.10.cpp)
add_executable(3.14 3.14.cpp)
add_executable(3.15 3.15.cpp)
add_executable(3.16 3.16.cpp)
add_executable(3.17 3.17.cpp)
add_executable(3.20_adjacent 3.20/adjacent.cpp)
add_executable(3.20_symmetric 3.20/symmetric.cpp)
add_executable(3.21_3.16 3.21/3.16.cpp)
add_executable(3.22 3.22.cpp)
add_executable(3.23 3.23.cpp)
add_executable(3.24_3.20_adjacent 3.24/3.20/adjacent.cpp)
add_executable(3.24_3.20_symmetric 3.24/3.20/symmetric.cpp)
add_executable(3.25 3.25.cpp)
add_executable(3.31 3.31.cpp)
add_executable(3.32_array 3.32/array.cpp)
add_executable(3.32_vector 3.32/vector.cpp)
add_executable(3.35 3.35.cpp)
add_executable(3.39 3.39.cpp)
add_executable(3.40 3.40.cpp)
add_executable(3.41 3.41.cpp)
add_executable(3.42 3.42.cpp)
add_executable(3.43_pointer 3.43/pointer.cpp)
add_executable(3.43_range_for 3.43/range_for.cpp)
add_executable(3.43_subscript 3.43/subscript.cpp)
add_executable(3.44_pointer 3.44/pointer.cpp)
add_executable(3.44_range_for 3.44/range_for.cpp)
add_executable(3.44_subscript 3.44/subscript.cpp)
add_executable(3.45_pointer 3.45/pointer.cpp)
add_executable(3.45_range_for 3.45/range_for.cpp)
add_executable(3.45_subscript 3.45/subscript.cpp)
